[package]
name = "issue-triage"
version = "0.1.0"
edition = "2021"
description = "A TUI for triaging GitHub issues"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
